--- a/quarto/_common_code.qmd
+++ b/quarto/_common_code.qmd
@@ -1,4 +1,5 @@
 ```{julia}
+#| output: false
 #| echo: false
 
 ## Formatting options are included here; not in CalculusWithJulia.WeaveSupport
@@ -7,18 +8,20 @@ nothing
 ```
 
 ```{julia}
+#| output: false
 #| echo: false
 fig_size=(800, 600)
 nothing
 ```
 
 ```{julia}
+#| output: false
 #| echo: false
 
 import Logging
 Logging.disable_logging(Logging.Info) # or e.g. Logging.Info
 Logging.disable_logging(Logging.Warn)
-
+nothing
 ```
 
 ```{julia}
@@ -36,6 +39,7 @@ end
 ```
 
 ```{julia}
+#| output: false
 #| echo: false
 # ImageFile
 ## WeaveSupport from CalculusWithJulia package
@@ -220,4 +224,6 @@ function Base.show(io::IO, m::MIME"text/plain", x::HTMLoutput)
     println(io, caption)
     return nothing
 end
+
+nothing
 ```
