--- a/quarto/derivatives/curve_sketching.qmd
+++ b/quarto/derivatives/curve_sketching.qmd
@@ -9,6 +9,7 @@ This section uses the following add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using Roots
 using Polynomials # some name clash with SymPy
@@ -38,7 +39,7 @@ With these, a sketch fills in between the points/lines associated with these val
 #| echo: false
 #| cache: true
 ### {{{ sketch_sin_plot }}}
-
+gr()
 
 function sketch_sin_plot_graph(i)
     f(x) = 10*sin(pi/2*x)  # [0,4]
@@ -84,7 +85,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
