--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 ```
 
@@ -218,6 +219,7 @@ The slope of the secant line represents the average rate of change over a given 
 #| hold: true
 #| echo: false
 #| cache: true
+gr()
 function secant_line_tangent_line_graph(n)
     f(x) = sin(x)
     c = pi/3
@@ -251,6 +253,7 @@ end
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -268,6 +271,7 @@ We will define the tangent line at $(c, f(c))$ to be the line through the point 
 #| hold: true
 #| echo: false
 #| cache: true
+gr()
 function line_approx_fn_graph(n)
     f(x) = sin(x)
     c = pi/3
@@ -296,6 +300,7 @@ end
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
