--- a/quarto/derivatives/optimization.qmd
+++ b/quarto/derivatives/optimization.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using Roots
 using SymPy
 ```
@@ -60,7 +61,7 @@ We began with the question of which rectangles of perimeter $20$ have the larges
 #| cache: true
 ### {{{perimeter_area_graphic}}}
 
-
+gr()
 function perimeter_area_graphic_graph(n)
     h = 1 + 2n
     w = 10-h
@@ -83,7 +84,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
