--- a/quarto/derivatives/related_rates.qmd
+++ b/quarto/derivatives/related_rates.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using Roots
 using SymPy
 ```
@@ -36,6 +37,7 @@ The following is a typical "book" problem:
 #| cache: true
 ### {{{growing_rects}}}
 ## Secant line approaches tangent line...
+gr()
 function growing_rects_graph(n)
     w = (t) -> 2 + 4t
     h = (t) -> 3/2 * w(t)
@@ -67,7 +69,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -400,6 +402,7 @@ $$
 #| cache: true
 ###{{{baseball_been_berry_good}}}
 ## Secant line approaches tangent line...
+gr()
 function baseball_been_berry_good_graph(n)
 
     v0 = 15
@@ -438,7 +441,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
