--- a/quarto/derivatives/taylor_series_polynomials.qmd
+++ b/quarto/derivatives/taylor_series_polynomials.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using Unitful
 ```
@@ -37,6 +38,7 @@ We will see in this section how the Taylor polynomial answers these questions, a
 #| echo: false
 #| cache: true
 ###{{{taylor_animation}}}
+gr()
 taylor(f, x, c, n) = series(f, x, c, n+1).removeO()
 function make_taylor_plot(u, a, b, k)
     k = 2k
@@ -67,7 +69,7 @@ caption = L"""
 Illustration of the Taylor polynomial of degree $k$, $T_k(x)$, at $c=0$ and its graph overlaid on that of the function $1 - \cos(x)$.
 
 """
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
