--- a/quarto/differentiable_vector_calculus/plots_plotting.qmd
+++ b/quarto/differentiable_vector_calculus/plots_plotting.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 import Contour: contours, levels, level, lines, coordinates
 using LinearAlgebra
 using ForwardDiff
@@ -393,7 +394,7 @@ $$
 where $t \in [0,1]$ This gives a vector-valued function
 
 $$
-F(u, t) = t * (r(u) - V) + V, \quad \alpha \leq u \leq \beta, 0 \leq t \leq 1.
+F(u, t) = t \cdot (r(u) - V) + V, \quad \alpha \leq u \leq \beta, 0 \leq t \leq 1.
 $$
 
 To illustrate, we have:
