--- a/quarto/differentiable_vector_calculus/polar_coordinates.qmd
+++ b/quarto/differentiable_vector_calculus/polar_coordinates.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using Roots
 using QuadGK
@@ -29,6 +30,7 @@ Polar coordinates parameterize the plane though an angle $\theta$ made from the 
 ```{julia}
 #| hold: true
 #| echo: false
+gr()
 theta = pi/6
 rr = 1
 
@@ -48,7 +50,9 @@ annotate!([
         (cos(theta), sin(theta)+.05, L"(x,y)"),
         (cos(theta),-.05, L"x"),
         (-.05, sin(theta),L"y")
-        ])
+])
+plotly()
+p
 ```
 
 To recover the Cartesian coordinates from the pair $(r,\theta)$, we have these formulas from [right](http://en.wikipedia.org/wiki/Polar_coordinate_system#Converting_between_polar_and_Cartesian_coordinates) triangle geometry:
