--- a/quarto/differentiable_vector_calculus/scalar_functions.qmd
+++ b/quarto/differentiable_vector_calculus/scalar_functions.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+gr()
 using ForwardDiff
 using SymPy
 using Roots
@@ -208,7 +209,7 @@ An alternate to `surface` is `wireframe` – which may not use shading in all ba
 ```{julia}
 #| hold: true
 xs = ys = range(-2,2, length=10) # downsample to see the frame
-wireframe(xs, ys, 𝒇)   # gr() or pyplot() wireplots render better than plotly()
+wireframe(xs, ys, 𝒇)
 ```
 
 ##### Example
