--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using QuadGK
 using Roots
@@ -69,6 +70,7 @@ To see why, any partition of the interval $[a,b]$ by $a = t_0 < t_1 < \cdots < t
 #| hold: false
 #| echo: false
 ## {{{arclength_graph}}}
+gr()
 function make_arclength_graph(n)
 
     ns = [10,15,20, 30, 50]
@@ -100,6 +102,7 @@ The arc length of the parametric curve can be approximated using straight line s
 
 """
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
