--- a/quarto/integrals/area.qmd
+++ b/quarto/integrals/area.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using QuadGK
 using Roots
 ```
@@ -75,7 +76,7 @@ In a previous section, we saw this animation:
 #| hold: true
 #| echo: false
 ## {{{archimedes_parabola}}}
-
+gr()
 
 f(x) = x^2
 colors = [:black, :blue, :orange, :red, :green, :orange, :purple]
@@ -126,7 +127,7 @@ caption = L"""
 The first triangle has area $1/2$, the second has area $1/8$, then $2$ have area $(1/8)^2$, $4$ have area $(1/8)^3$, ...
 With some algebra, the total area then should be $1/2 \cdot (1 + (1/4) + (1/4)^2 + \cdots) = 2/3$.
 """
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -188,6 +189,7 @@ Clearly for a given partition and choice of $c_i$, the above can be computed. Ea
 ```{julia}
 #| hold: true
 #| echo: false
+gr()
 rectangle(x, y, w, h) = Shape(x .+ [0,w,w,0], y .+ [0,0,h,h])
 function ₙ(j)
 	a = ("₋","","","₀","₁","₂","₃","₄","₅","₆","₇","₈","₉")
@@ -218,6 +220,7 @@ gif(anim, imgfile, fps = 1)
 
 caption = "Illustration of left Riemann sum for increasing ``n`` values"
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
