--- a/quarto/integrals/ftc.qmd
+++ b/quarto/integrals/ftc.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using Roots
 using QuadGK
@@ -434,7 +435,7 @@ The value of $a$ does not matter, as long as the integral is defined.
 #| hold: true
 #| echo: false
 ##{{{ftc_graph}}}
-
+gr()
 function make_ftc_graph(n)
     a, b = 2, 3
     ts = range(0, stop=b, length=50)
@@ -471,7 +472,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
