--- a/quarto/integrals/improper_integrals.qmd
+++ b/quarto/integrals/improper_integrals.qmd
@@ -9,6 +9,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using QuadGK
 ```
@@ -27,7 +28,7 @@ To define integrals  with either functions having singularities or infinite doma
 #| hold: true
 #| echo: false
 ### {{{sqrt_graph}}}
-
+gr()
 function make_sqrt_x_graph(n)
 
     b = 1
@@ -58,7 +59,7 @@ end
 
 imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
