--- a/quarto/integrals/surface_area.qmd
+++ b/quarto/integrals/surface_area.qmd
@@ -10,6 +10,7 @@ This section uses these add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 using QuadGK
 ```
@@ -549,7 +550,7 @@ numericq(val)
 ```{julia}
 #| hold: true
 #| echo: false
-
+gr()
 ## For **some reason** having this in the natural place messes up the plots.
 ## {{{approximate_surface_area}}}
 
@@ -582,5 +583,6 @@ Surface of revolution of $f(x) = 2 - x^2$ about the $y$ axis. The lines segments
 
 """
 
+plotly()
 ImageFile(imgfile, caption)
 ```
