--- a/quarto/limits/limits_extensions.qmd
+++ b/quarto/limits/limits_extensions.qmd
@@ -9,6 +9,7 @@ This section uses the following add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 ```
 
@@ -624,6 +625,8 @@ Select the graph for which the limit at $a$ is infinite.
 ```{julia}
 #| hold: true
 #| echo: false
+gr()
+
 p1 = plot(;axis=nothing, legend=false)
 title!(p1, "(a)")
 plot!(p1, x -> x^2, 0, 2, color=:black)
@@ -653,6 +656,7 @@ l = @layout[a b; c d]
 p = plot(p1, p2, p3, p4, layout=l)
 imgfile = tempname() * ".png"
 savefig(p, imgfile)
+plotly()
 hotspotq(imgfile, (1/2,1), (1/2,1))
 ```
 
@@ -665,6 +669,7 @@ Select the graph for which the limit at $\infty$ appears to be defined.
 ```{julia}
 #| hold: true
 #| echo: false
+gr()
 p1 = plot(;axis=nothing, legend=false)
 title!(p1, "(a)")
 plot!(p1, x -> x^2, 0, 2, color=:black)
@@ -690,6 +695,7 @@ l = @layout[a b; c d]
 p = plot(p1, p2, p3, p4, layout=l)
 imgfile = tempname() * ".png"
 savefig(p, imgfile)
+plotly()
 hotspotq(imgfile, (1/2,1), (1/2,1))
 ```
 
