--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -762,6 +762,30 @@ numericq(val)
 
 ###### Question
 
+You are asked to cook chicken is an unfamiliar kitchen.  Your recipe says to turn the oven to 200 Celsius, but you the oven is calibrated in Fahrenheit. Which value is closest?
+
+```{julia}
+#| echo: false
+choices = [350, 375, 400, 425, 450]
+v = 9/5*200 + 32
+_, answer = findmin(abs.(choices .- v))
+radioq(choices, answer; keep_order=true)
+```
+
+The recipe says cook until the internal temperature is 165 degrees Fahrenheit. However, the food thermometer in the kitchen is calibrated in Celsius. Which value is closest?
+
+```{julia}
+#| echo: false
+choices = [68,70,72,74,76,78,80]
+v = 5/9*(165 - 32)
+_, answer = findmin(abs.(choices .- v))
+radioq(choices, answer; keep_order=true)
+```
+
+(Use $F = 9/5\cdot C + 32$ and $C = 5/9(F-32)$.)
+
+###### Question
+
 
 Which of the following is a valid `Julia` expression for
 
