--- a/quarto/precalc/logical_expressions.qmd
+++ b/quarto/precalc/logical_expressions.qmd
@@ -14,6 +14,7 @@ using CalculusWithJulia    # loads the `SpecialFunctions` package
 #| echo: false
 #| results: "hidden"
 using Plots
+plotly()
 nothing
 ```
 
