--- a/quarto/precalc/plotting.qmd
+++ b/quarto/precalc/plotting.qmd
@@ -9,6 +9,7 @@ This section will use the following packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 ```
 
 ```{julia}
@@ -74,8 +75,13 @@ using Plots
 
 :::
 
-The `plotly` backend is part of the `Plots` package, as is `gr`. Other backends require installation, such as `PyPlot` and `PlotlyJS`. We use `gr` in these notes, for the most part. (The `plotly` backend is also quite nice for interactive usage, but doesn't work as well with the static HTML pages.)
+Some backends require installation, such as `PyPlot` and `PlotlyJS`. We use `plotly` in these notes, for the most part, which is not the default, so requires an additional command to set the backend:
 
+```{julia}
+plotly()
+```
+
+(Certain graphics are produced with the `gr()` backend.)
 
 With `Plots` loaded, it is straightforward to graph a function.
 
