--- a/quarto/precalc/polynomials_package.qmd
+++ b/quarto/precalc/polynomials_package.qmd
@@ -9,6 +9,7 @@ This section will use the following add-on packages:
 ```{julia}
 import CalculusWithJulia
 using Plots
+plotly()
 using Polynomials
 using RealPolynomialRoots
 import SymPy # imported only: some functions, e.g. degree, need qualification
