--- a/quarto/precalc/rational_functions.qmd
+++ b/quarto/precalc/rational_functions.qmd
@@ -10,6 +10,7 @@ This section uses the following add-on packages:
 using CalculusWithJulia
 using SymPy
 using Plots
+plotly()
 import Polynomials
 using RealPolynomialRoots
 ```
