--- a/quarto/precalc/trig_functions.qmd
+++ b/quarto/precalc/trig_functions.qmd
@@ -9,6 +9,7 @@ This section uses the following add-on packages:
 ```{julia}
 using CalculusWithJulia
 using Plots
+plotly()
 using SymPy
 ```
 
@@ -70,6 +71,7 @@ These definitions in terms of sides only apply for $0 \leq \theta \leq \pi/2$. M
 #| cache: true
 ## {{{radian_to_trig}}}
 
+gr()
 
 function plot_angle(m)
     r = m*pi
@@ -107,6 +109,7 @@ imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 1)
 caption = "An angle in radian measure corresponds to a point on the unit circle, whose coordinates define the sine and cosine of the angle. That is ``(x,y) = (\\cos(\\theta), \\sin(\\theta))``."
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -293,7 +296,8 @@ The superposition of the two sine functions that `g2` represents could be viewed
 #| hold: true
 #| echo: false
 #| cache: true
-unzip(vs::Vector) = Tuple([[vs[i][j] for i in eachindex(vs)] for j in eachindex(vs[1])])
+gr()
+
 function makegraph(t, b₁,n₁, b₂=0, n₂=1)
 
     f₁ = x -> b₁*[sin(2pi*n₁*x), cos(2pi*n₁*x)]
@@ -350,7 +354,7 @@ imgfile = tempname() * ".gif"
 gif(anim, imgfile, fps = 5)
 
 caption = "Superposition of sines and cosines represented by an epicycle"
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
