--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -9,6 +9,7 @@
 #| results: "hidden"
 using CalculusWithJulia
 using Plots
+plotly()
 using Measures
 using LaTeXStrings
 
@@ -21,6 +22,8 @@ One of the first models learned in physics are the equations governing the laws 
 ```{julia}
 #| hold: true
 #| echo: false
+
+gr()
 px = 0.26mm
 x0 = [0, 64]
 v0 = [20, 0]
@@ -45,7 +48,7 @@ function make_plot(t)
 
     xs, ys = [p[1] for p in xys], [p[2] for p in xys]
 
-    plt = Plots.plot(xs, ys, legend=false, size=fig_size, xlims=(0,45), ylims=(0,70))
+    plt = plot(xs, ys, legend=false, size=fig_size, xlims=(0,45), ylims=(0,70))
     plot!(plt, zero, extrema(xs)...)
     arrow!(xn(t), 10*unit(xn(t)), color="black")
     arrow!(xn(t), 10*unit(vn(t)), color="red")
@@ -74,6 +77,7 @@ end
 
 gif(anim, imgfile, fps = 1)
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -111,6 +115,8 @@ The magnitude of a vector comes from the distance formula applied to a line segm
 #| hold: true
 #| echo: false
 ## generic vector
+gr()
+
 p0 = [0,0]
 a1 = [4,1]
 b1 = [-2,2]
@@ -126,6 +132,7 @@ png(plt, imgfile)
 
 caption = "A vector and its unit vector. They share the same direction, but the unit vector has a standardized magnitude."
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -143,13 +150,13 @@ Two operations on vectors are fundamental.
 #| hold: true
 #| echo: false
 ## vector_addition_image
-
+gr()
 p0 = [0,0]
 a1 = [4,1]
 b1 = [-2,2]
 
 
-plt = Plots.plot(legend=false, size=fig_size)
+plt = plot(legend=false, size=fig_size)
 arrow!(p0, a1, color="blue")
 arrow!(p0+a1, b1, color="red")
 arrow!(p0, a1+b1, color="black")
@@ -160,6 +167,7 @@ png(plt, imgfile)
 
 caption = "The sum of two vectors can be visualized by placing the tail of one at the tip of the other"
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -167,7 +175,7 @@ ImageFile(imgfile, caption)
 #| hold: true
 #| echo: false
 ## vector_subtraction_image
-
+gr()
 p0 = [0,0]
 a1 = [-2,2]
 b1 = [4,1]
@@ -183,7 +191,7 @@ imgfile = tempname() * ".png"
 png(plt, imgfile)
 
 caption = "The difference of two vectors can be visualized by placing the tail of one at the tip of the other"
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -194,7 +202,7 @@ The concept of scalar multiplication and addition, allow the decomposition of ve
 #| hold: true
 #| echo: false
 ### {{{vector_decomp}}}
-
+gr()
 p0 = [0,0]
 aa = [1,2]
 bb = [2,1]
@@ -224,7 +232,7 @@ can be written uniquely as
 provided ``\vec{a}`` and ``\vec{b}`` are not parallel.
 
 """
-
+plotly()
 ImageFile(imgfile, caption)
 ```
 
@@ -248,6 +256,7 @@ If we are given $r$ and $\theta$, then the vector is $v = \langle r \cdot \cos(\
 #| hold: true
 #| echo: false
 ## vector_rtheta
+gr()
 p0 = [0,0]
 
 plt = plot(legend=false, size=fig_size)
@@ -266,6 +275,7 @@ A vector ``\langle x, y \rangle`` can be written as ``\langle r\cdot
 ``\theta``. The value ``r`` is a magnitude, the direction parameterized by
 ``\theta``."""
 
+plotly()
 ImageFile(imgfile, caption)
 ```
 
